# wch-ch32v20x-flash

./: .gdbinit  CMakeLists.txt  README.md  boot.h  linker.ld
cmake/: riscv.cmake
lib/wch/: ch32v20x_conf.h
sfdpparser/: sfdp-parser.c
src/: main.c  platform.h  startup_ch32v20x_D6.S
